-
Bug
-
Resolution: Fixed
-
P1: Critical
-
None
-
6.8.0 FF
-
None
-
ff26683d1 (dev)
C:/Users/qt/work/install/include/QtCore/qstringalgorithms.h:196:27: error: 'size' is not a member of 'std' 196 | return qsizetype(std::size(c)); | ^~~~ ninja: build stopped: subcommand failed. Process finished with error: exit status 1 Executing scheduled instruction 1 of 2 - Upload all core dumps if there are some Skip uploading core files because CORE_FILES_PATH is not set in the environment
Details: https://testresults.qt.io/coin/integration/qt/qtgrpc/tasks/1709395494
Tested changes (refs/builds/qtci/dev/1709395209):
https://codereview.qt-project.org/c/qt/qtgrpc/+/544837/2 Update dependencies on 'dev' in qt/qtgrpc
For Gerrit Dashboard: QTBUG-122952 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
544889,2 | Workaround an issue related to the undefined std::size() method | dev | qt/qtgrpc | Status: MERGED | +2 | 0 |
545046,1 | Workaround an issue related to the undefined std::size() method | 6.7 | qt/qtgrpc | Status: ABANDONED | 0 | 0 |