Workaround an issue related to the undefined std::size() method

Pick-to: 6.7
Task-number: QTBUG-122952
Change-Id: I261d0c7c07431b1a8bd9253a1ff0919a1ee407ba
Reviewed-by: Jani Heikkinen <jani.heikkinen@qt.io>